--- a/configs.json
+++ b/configs.json
@@ -418,32 +418,32 @@
                         "title": "module.template",
                         "template": "module_template",
                         "previousLink": "module/introduction",
-                        "nextLink": "module/script"
-                    },
-                    "modules": {
-                        "module_template": "./module/template.html"
-                    }
-                }, {
-                    "path": "script",
-                    "constants": {
-                        "title": "module.script",
-                        "template": "module_script",
-                        "previousLink": "module/template",
                         "nextLink": "module/style"
                     },
                     "modules": {
-                        "module_script": "./module/script.html"
+                        "module_template": "./module/template.html"
                     }
                 }, {
                     "path": "style",
                     "constants": {
                         "title": "module.style",
                         "template": "module_style",
-                        "previousLink": "module/script",
-                        "nextLink": "module/json"
+                        "previousLink": "module/template",
+                        "nextLink": "module/script"
                     },
                     "modules": {
                         "module_style": "./module/style.html"
+                    }
+                }, {
+                    "path": "script",
+                    "constants": {
+                        "title": "module.script",
+                        "template": "module_script",
+                        "previousLink": "module/style",
+                        "nextLink": "module/json"
+                    },
+                    "modules": {
+                        "module_script": "./module/script.html"
                     }
                 }, {
                     "path": "json",
